frontend/src/context/Modal.css
/* frontend/src/context/Modal.css */
#modal {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

#modal-background {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.7);
}

#modal-content {
  position: absolute;
  background-color:mistyrose;
  border: 5px solid black;
}

.modal-form {
  width: 30vw;
  height: 50vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.modal-form__title {
  font-weight: bold;
  font-size: 3rem;
  align-self: center;
  border-bottom: dashed 5px black;
}

.modal-form label {
  display:flex;
  padding: 0 10px;
  justify-content: space-between;
}

.modal-form__form-field input {
  width: 100%;
  border-radius: 0;
}

.modal-form__button {
  width: 100%;
}

.modal-form__button > button{
  width: 100%;
  background: #FD9D93;
  border-radius: 0;
}

